--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   url_launcher: ^6.2.2
   flutter_map: ^6.1.0
   latlong2: ^0.9.1
+  http: ^1.2.1
+  shared_preferences: ^2.5.3
+  supabase_flutter: ^2.9.1
 
 dev_dependencies:
   flutter_test:
